[package]
name = "rag_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

# Utils
anyhow = "1.0"
walkdir = "2.4"

# Logging (simplifié pour éviter les erreurs de macros)
log = "0.4"
env_logger = "0.11"

# Embeddings
ort = {version="2.0.0-rc.12",features = ["download-binaries"]}
ndarray = "0.15"
tokenizers = "0.22.2"

[profile.release]
lto = true
codegen-units = 1
